--- a/source/_patterns/02-organisms/00-global/01-footer.mustache
+++ b/source/_patterns/02-organisms/00-global/01-footer.mustache
@@ -10,7 +10,11 @@
             <div class="col_4">
             200 N. Main Street,<br>
 			RM 1500 CHE<br>
-			Los Angeles, CA 90012<br>  
+			Los Angeles, CA 90012<br>
+			<br>
+			+1-213-473-7500<br>
+			<br>
+			innovate@lacity.org<br> 
             </div>
             <div class="col_4 last">
 			{{> molecules-footer-nav }}
