Revert Footer Colors

--- a/source/css/scss/objects/_footer.scss
+++ b/source/css/scss/objects/_footer.scss
@@ -170,7 +170,7 @@ body .wrapper:first-child {
 .flexGRID .row .col_10,
 .flexGRID .row .col_11,
 .flexGRID .row .col_12 {
-	background: $gray-med;
+	background: $black;
 	border-radius: 5px;
 }
 .flexGRID .row:first-child .col_12 {
