--- a/source/css/style.css
+++ b/source/css/style.css
@@ -1610,7 +1610,7 @@ body .wrapper:first-child {
 /* line 20, scss/objects/_buttons.scss */
 .btn.disabled {
   background: #E0E0E0;
-  color: #E0E0E0;
+  color: #474747;
 }
 
 /* line 26, scss/objects/_buttons.scss */
