--- a/source/_patterns/01-molecules/02-blocks/06-block-inset.mustache
+++ b/source/_patterns/01-molecules/02-blocks/06-block-inset.mustache
@@ -1,7 +1,7 @@
 <div class="block block-inset">
     <a href="{{ url }}" class="inner">
 		<div class="b-thumb">
-			{{> atoms-landscape-4x3 }} 
+			{{> atoms-thumbnail-16x9 }} 
 		</div>
 		<div class="b-text">
 			<h2 class="headline">{{ headline.short }}</h2>
