--- a/source/_patterns/00-atoms/01-global/00-colors.mustache
+++ b/source/_patterns/00-atoms/01-global/00-colors.mustache
@@ -3,64 +3,233 @@
 	<li>
 		<span class="sg-label">Orange</span>
 		<span class="sg-swatch" style="background: #CC4E10;"></span>
+		<div class="color-test">
+			<div class="result">
+				<span class="fail">x</span>
+				<span class="fail">x</span>
+				<span class="fail">x</span>
+				<span class="pass">o</span>
+			</div>
+			<div class="subject">
+				<span style="color: #212121;">Aa</span>
+				<span style="color: #474747;">Bb</span>
+				<span style="color: #E0E0E0;">Cc</span>
+				<span style="color: #FFFFFF;">Dd</span>
+			</div>
+		</div>
 		<span class="sg-label">#CC4E10</span>
 	</li>
 	<li>
 		<span class="sg-label">ClassicBlue</span>
 		<span class="sg-swatch" style="background: #014982;"></span>
+		<div class="color-test">
+			<div class="result">
+				<span class="fail">x</span>
+				<span class="fail">x</span>
+				<span class="pass">o</span>
+				<span class="pass">o</span>
+			</div>
+			<div class="subject">
+				<span style="color: #212121;">Aa</span>
+				<span style="color: #474747;">Bb</span>
+				<span style="color: #E0E0E0;">Cc</span>
+				<span style="color: #FFFFFF;">Dd</span>
+			</div>
+		</div>
 		<span class="sg-label">#014982</span>
 	</li>
 	<li>
 		<span class="sg-label">LightBlue</span>
 		<span class="sg-swatch" style="background: #63C9F7;"></span>
+		<div class="color-test">
+			<div class="result">
+				<span class="pass">o</span>
+				<span class="pass">o</span>
+				<span class="fail">x</span>
+				<span class="fail">x</span>
+			</div>
+			<div class="subject">
+				<span style="color: #212121;">Aa</span>
+				<span style="color: #474747;">Bb</span>
+				<span style="color: #E0E0E0;">Cc</span>
+				<span style="color: #FFFFFF;">Dd</span>
+			</div>
+		</div>
 		<span class="sg-label">#63C9F7</span>
 	</li>
 	<li>
 		<span class="sg-label">RichRed</span>
 		<span class="sg-swatch" style="background: #CC2A14;"></span>
+		<div class="color-test">
+			<div class="result">
+				<span class="fail">x</span>
+				<span class="fail">x</span>
+				<span class="fail">x</span>
+				<span class="pass">o</span>
+			</div>
+			<div class="subject">
+				<span style="color: #212121;">Aa</span>
+				<span style="color: #474747;">Bb</span>
+				<span style="color: #E0E0E0;">Cc</span>
+				<span style="color: #FFFFFF;">Dd</span>
+			</div>
+		</div>
 		<span class="sg-label">#CC2A14</span>
 	</li>
 	<li>
 		<span class="sg-label">LightGreen</span>
 		<span class="sg-swatch" style="background: #92CC4E;"></span>
+		<div class="color-test">
+			<div class="result">
+				<span class="pass">o</span>
+				<span class="pass">o</span>
+				<span class="fail">x</span>
+				<span class="fail">x</span>
+			</div>
+			<div class="subject">
+				<span style="color: #212121;">Aa</span>
+				<span style="color: #474747;">Bb</span>
+				<span style="color: #E0E0E0;">Cc</span>
+				<span style="color: #FFFFFF;">Dd</span>
+			</div>
+		</div>
 		<span class="sg-label">#92CC4E</span>
 	</li>
 	<li>
 		<span class="sg-label">Yellow</span>
 		<span class="sg-swatch" style="background: #FFEB3B;"></span>
+		<div class="color-test">
+			<div class="result">
+				<span class="pass">o</span>
+				<span class="pass">o</span>
+				<span class="fail">x</span>
+				<span class="fail">x</span>
+			</div>
+			<div class="subject">
+				<span style="color: #212121;">Aa</span>
+				<span style="color: #474747;">Bb</span>
+				<span style="color: #E0E0E0;">Cc</span>
+				<span style="color: #FFFFFF;">Dd</span>
+			</div>
+		</div>
 		<span class="sg-label">#FFEB3B</span>
 	</li>
 </ul>
-<h2>Business Colors</h2>
+<h2>Classic Colors</h2>
 <ul class="sg-colors">
 	<li>
 		<span class="sg-label">Orange</span>
 		<span class="sg-swatch" style="background: #CC4E10;"></span>
+		<div class="color-test">
+			<div class="result">
+				<span class="fail">x</span>
+				<span class="fail">x</span>
+				<span class="fail">x</span>
+				<span class="pass">o</span>
+			</div>
+			<div class="subject">
+				<span style="color: #212121;">Aa</span>
+				<span style="color: #474747;">Bb</span>
+				<span style="color: #E0E0E0;">Cc</span>
+				<span style="color: #FFFFFF;">Dd</span>
+			</div>
+		</div>
 		<span class="sg-label">#CC4E10</span>
 	</li>
 	<li>
 		<span class="sg-label">ClassicBlue</span>
 		<span class="sg-swatch" style="background: #014982;"></span>
+		<div class="color-test">
+			<div class="result">
+				<span class="fail">x</span>
+				<span class="fail">x</span>
+				<span class="pass">o</span>
+				<span class="pass">o</span>
+			</div>
+			<div class="subject">
+				<span style="color: #212121;">Aa</span>
+				<span style="color: #474747;">Bb</span>
+				<span style="color: #E0E0E0;">Cc</span>
+				<span style="color: #FFFFFF;">Dd</span>
+			</div>
+		</div>
 		<span class="sg-label">#014982</span>
 	</li>
 	<li>
 		<span class="sg-label">Teal</span>
 		<span class="sg-swatch" style="background: #00758C;"></span>
+		<div class="color-test">
+			<div class="result">
+				<span class="fail">x</span>
+				<span class="fail">x</span>
+				<span class="fail">x</span>
+				<span class="pass">o</span>
+			</div>
+			<div class="subject">
+				<span style="color: #212121;">Aa</span>
+				<span style="color: #474747;">Bb</span>
+				<span style="color: #E0E0E0;">Cc</span>
+				<span style="color: #FFFFFF;">Dd</span>
+			</div>
+		</div>
 		<span class="sg-label">#00758C</span>
 	</li>
 	<li>
 		<span class="sg-label">Burgundy</span>
 		<span class="sg-swatch" style="background: #800D20;"></span>
+		<div class="color-test">
+			<div class="result">
+				<span class="fail">x</span>
+				<span class="fail">x</span>
+				<span class="pass">o</span>
+				<span class="pass">o</span>
+			</div>
+			<div class="subject">
+				<span style="color: #212121;">Aa</span>
+				<span style="color: #474747;">Bb</span>
+				<span style="color: #E0E0E0;">Cc</span>
+				<span style="color: #FFFFFF;">Dd</span>
+			</div>
+		</div>
 		<span class="sg-label">#800D20</span>
 	</li>
 	<li>
 		<span class="sg-label">RichGreen</span>
 		<span class="sg-swatch" style="background: #326E1E;"></span>
+
+		<div class="color-test">
+			<div class="result">
+				<span class="fail">x</span>
+				<span class="fail">x</span>
+				<span class="pass">o</span>
+				<span class="pass">o</span>
+			</div>
+			<div class="subject">
+				<span style="color: #212121;">Aa</span>
+				<span style="color: #474747;">Bb</span>
+				<span style="color: #E0E0E0;">Cc</span>
+				<span style="color: #FFFFFF;">Dd</span>
+			</div>
+		</div>
 		<span class="sg-label">#326E1E</span>
 	</li>
 	<li>
 		<span class="sg-label">ClassicGold</span>
 		<span class="sg-swatch" style="background: #F9B000;"></span>
+		<div class="color-test">
+			<div class="result">
+				<span class="pass">o</span>
+				<span class="pass">o</span>
+				<span class="fail">x</span>
+				<span class="fail">x</span>
+			</div>
+			<div class="subject">
+				<span style="color: #212121;">Aa</span>
+				<span style="color: #474747;">Bb</span>
+				<span style="color: #E0E0E0;">Cc</span>
+				<span style="color: #FFFFFF;">Dd</span>
+			</div>
+		</div>
 		<span class="sg-label">#F9B000</span>
 	</li>
 </ul>
@@ -69,21 +238,77 @@
 	<li>
 		<span class="sg-label">Black(87%)</span>
 		<span class="sg-swatch" style="background: #212121;"></span>
+		<div class="color-test">
+			<div class="result">
+				<span class="fail">x</span>
+				<span class="fail">x</span>
+				<span class="pass">o</span>
+				<span class="pass">o</span>
+			</div>
+			<div class="subject">
+				<span style="color: #212121;">Aa</span>
+				<span style="color: #474747;">Bb</span>
+				<span style="color: #E0E0E0;">Cc</span>
+				<span style="color: #FFFFFF;">Dd</span>
+			</div>
+		</div>
 		<span class="sg-label">#212121</span>
 	</li>
 	<li>
 		<span class="sg-label">DarkGrey(72%)</span>
 		<span class="sg-swatch" style="background: #474747;"></span>
+		<div class="color-test">
+			<div class="result">
+				<span class="fail">x</span>
+				<span class="fail">x</span>
+				<span class="pass">o</span>
+				<span class="pass">o</span>
+			</div>
+			<div class="subject">
+				<span style="color: #212121;">Aa</span>
+				<span style="color: #474747;">Bb</span>
+				<span style="color: #E0E0E0;">Cc</span>
+				<span style="color: #FFFFFF;">Dd</span>
+			</div>
+		</div>
 		<span class="sg-label">#474747</span>
 	</li>
 	<li>
 		<span class="sg-label">LightGrey(12%)</span>
 		<span class="sg-swatch" style="background: #E0E0E0;"></span>
+		<div class="color-test">
+			<div class="result">
+				<span class="pass">o</span>
+				<span class="pass">o</span>
+				<span class="fail">x</span>
+				<span class="fail">x</span>
+			</div>
+			<div class="subject">
+				<span style="color: #212121;">Aa</span>
+				<span style="color: #474747;">Bb</span>
+				<span style="color: #E0E0E0;">Cc</span>
+				<span style="color: #FFFFFF;">Dd</span>
+			</div>
+		</div>
 		<span class="sg-label">#E0E0E0</span>
 	</li>
 	<li>
 		<span class="sg-label">White</span>
 		<span class="sg-swatch" style="background: #FFFFFF;"></span>
+		<div class="color-test">
+			<div class="result">
+				<span class="pass">o</span>
+				<span class="pass">o</span>
+				<span class="fail">x</span>
+				<span class="fail">x</span>
+			</div>
+			<div class="subject">
+				<span style="color: #212121;">Aa</span>
+				<span style="color: #474747;">Bb</span>
+				<span style="color: #E0E0E0;">Cc</span>
+				<span style="color: #FFFFFF;">Dd</span>
+			</div>
+		</div>
 		<span class="sg-label">#FFFFFF</span>
 	</li>
  </ul>
