Appied style for footer icons

--- a/source/_patterns/02-organisms/00-global/01-footer.mustache
+++ b/source/_patterns/02-organisms/00-global/01-footer.mustache
@@ -8,13 +8,15 @@
 			<p class="copyright">&copy; 2015 Company Name. All rights reserved. | Disclaimer | Privacy Policy</p>
             </div>
             <div class="col_4">
-            200 N. Main Street,<br>
+            <div class="left"><img src="../../images/icons/icon-location.png"></div><div>200 N. Main Street,<br>
 			RM 1500 CHE<br>
-			Los Angeles, CA 90012<br>
+			Los Angeles, CA 90012
+			</div>
 			<br>
-			+1-213-473-7500<br>
 			<br>
-			innovate@lacity.org<br> 
+			<div class="left"><img src="../../images/icons/icon-phone.png"></div><div>+1-213-473-7500</div><br>
+			<br>
+			<div class="left"><img src="../../images/icons/icon-email.png"></div><div>innovate@lacity.org</div><br> 
             </div>
             <div class="col_4 last">
 			{{> molecules-footer-nav }}
