Adjusted footer link spacing and link hover color

--- a/source/_patterns/02-organisms/00-global/01-footer.mustache
+++ b/source/_patterns/02-organisms/00-global/01-footer.mustache
@@ -12,11 +12,9 @@
 			RM 1500 CHE<br>
 			Los Angeles, CA 90012
 			</div>
-			<br>
-			<br>
-			<div class="left"><img src="../../images/icons/icon-phone.png"></div><div>+1-213-473-7500</div><br>
-			<br>
-			<div class="left"><img src="../../images/icons/icon-email.png"></div><div>innovate@lacity.org</div><br> 
+			<br><br>
+			<div class="left"><img src="../../images/icons/icon-phone.png"></div><div>+1-213-473-7500</div><br><br>
+			<div class="left"><img src="../../images/icons/icon-email.png"></div><div>innovate@lacity.org</div>
             </div>
             <div class="col_4 last">
 			{{> molecules-footer-nav }}
