Adjusted color swatch height and reset footer spacing

--- a/source/css/scss/objects/_footer.scss
+++ b/source/css/scss/objects/_footer.scss
@@ -15,7 +15,7 @@
 
 //Footer Nav
 .nav-footer {
-	margin: (-$pad) (-$pad) $space;
+	// margin: (-$pad) (-$pad) $space;
 
 	li {
 		border-bottom: 1px solid $gray-dark;
