LC-833 resets home page slab

--- a/source/_patterns/00-atoms/01-global/00-colors.mustache
+++ b/source/_patterns/00-atoms/01-global/00-colors.mustache
@@ -1,8 +1,8 @@
 <h2>Vibrant Colors</h2>
-<ul class="sg-colors">
+<ul class="sg-colors lrg">
 	<li>
 		<span class="sg-label">Orange</span>
-		<span class="sg-swatch" style="background: #CC4E10;"></span>
+		<span class="sg-swatch lrg" style="background: #CC4E10;"></span>
 		<div class="color-test">
 			<div class="result">
 				<span class="fail">x</span>
@@ -21,7 +21,7 @@
 	</li>
 	<li>
 		<span class="sg-label">ClassicBlue</span>
-		<span class="sg-swatch" style="background: #014982;"></span>
+		<span class="sg-swatch lrg" style="background: #014982;"></span>
 		<div class="color-test">
 			<div class="result">
 				<span class="fail">x</span>
@@ -40,7 +40,7 @@
 	</li>
 	<li>
 		<span class="sg-label">LightBlue</span>
-		<span class="sg-swatch" style="background: #63C9F7;"></span>
+		<span class="sg-swatch lrg" style="background: #63C9F7;"></span>
 		<div class="color-test">
 			<div class="result">
 				<span class="pass">o</span>
@@ -59,7 +59,7 @@
 	</li>
 	<li>
 		<span class="sg-label">RichRed</span>
-		<span class="sg-swatch" style="background: #CC2A14;"></span>
+		<span class="sg-swatch lrg" style="background: #CC2A14;"></span>
 		<div class="color-test">
 			<div class="result">
 				<span class="fail">x</span>
@@ -78,7 +78,7 @@
 	</li>
 	<li>
 		<span class="sg-label">LightGreen</span>
-		<span class="sg-swatch" style="background: #92CC4E;"></span>
+		<span class="sg-swatch lrg" style="background: #92CC4E;"></span>
 		<div class="color-test">
 			<div class="result">
 				<span class="pass">o</span>
@@ -97,7 +97,7 @@
 	</li>
 	<li>
 		<span class="sg-label">Yellow</span>
-		<span class="sg-swatch" style="background: #FFEB3B;"></span>
+		<span class="sg-swatch lrg" style="background: #FFEB3B;"></span>
 		<div class="color-test">
 			<div class="result">
 				<span class="pass">o</span>
@@ -119,7 +119,7 @@
 <ul class="sg-colors">
 	<li>
 		<span class="sg-label">Orange</span>
-		<span class="sg-swatch" style="background: #CC4E10;"></span>
+		<span class="sg-swatch lrg" style="background: #CC4E10;"></span>
 		<div class="color-test">
 			<div class="result">
 				<span class="fail">x</span>
@@ -138,7 +138,7 @@
 	</li>
 	<li>
 		<span class="sg-label">ClassicBlue</span>
-		<span class="sg-swatch" style="background: #014982;"></span>
+		<span class="sg-swatch lrg" style="background: #014982;"></span>
 		<div class="color-test">
 			<div class="result">
 				<span class="fail">x</span>
@@ -157,7 +157,7 @@
 	</li>
 	<li>
 		<span class="sg-label">Teal</span>
-		<span class="sg-swatch" style="background: #00758C;"></span>
+		<span class="sg-swatch lrg" style="background: #00758C;"></span>
 		<div class="color-test">
 			<div class="result">
 				<span class="fail">x</span>
@@ -176,7 +176,7 @@
 	</li>
 	<li>
 		<span class="sg-label">Burgundy</span>
-		<span class="sg-swatch" style="background: #800D20;"></span>
+		<span class="sg-swatch lrg" style="background: #800D20;"></span>
 		<div class="color-test">
 			<div class="result">
 				<span class="fail">x</span>
@@ -195,7 +195,7 @@
 	</li>
 	<li>
 		<span class="sg-label">RichGreen</span>
-		<span class="sg-swatch" style="background: #326E1E;"></span>
+		<span class="sg-swatch lrg" style="background: #326E1E;"></span>
 
 		<div class="color-test">
 			<div class="result">
@@ -215,7 +215,7 @@
 	</li>
 	<li>
 		<span class="sg-label">ClassicGold</span>
-		<span class="sg-swatch" style="background: #F9B000;"></span>
+		<span class="sg-swatch lrg" style="background: #F9B000;"></span>
 		<div class="color-test">
 			<div class="result">
 				<span class="pass">o</span>
@@ -237,7 +237,7 @@
 <ul class="sg-colors">
 	<li>
 		<span class="sg-label">Black(87%)</span>
-		<span class="sg-swatch" style="background: #212121;"></span>
+		<span class="sg-swatch lrg" style="background: #212121;"></span>
 		<div class="color-test">
 			<div class="result">
 				<span class="fail">x</span>
@@ -256,7 +256,7 @@
 	</li>
 	<li>
 		<span class="sg-label">DarkGrey(72%)</span>
-		<span class="sg-swatch" style="background: #474747;"></span>
+		<span class="sg-swatch lrg" style="background: #474747;"></span>
 		<div class="color-test">
 			<div class="result">
 				<span class="fail">x</span>
@@ -275,7 +275,7 @@
 	</li>
 	<li>
 		<span class="sg-label">LightGrey(12%)</span>
-		<span class="sg-swatch" style="background: #E0E0E0;"></span>
+		<span class="sg-swatch lrg" style="background: #E0E0E0;"></span>
 		<div class="color-test">
 			<div class="result">
 				<span class="pass">o</span>
@@ -294,7 +294,7 @@
 	</li>
 	<li>
 		<span class="sg-label">White</span>
-		<span class="sg-swatch" style="background: #FFFFFF;"></span>
+		<span class="sg-swatch lrg" style="background: #FFFFFF;"></span>
 		<div class="color-test">
 			<div class="result">
 				<span class="pass">o</span>
