--- a/source/css/scss/base/_color.scss
+++ b/source/css/scss/base/_color.scss
@@ -1,3 +1,16 @@
+// .sg-colors.lrg {
+// 	@media all and (min-width: 30em){
+// 		width: 10em;
+// 	}
+// }
+
+// .sg-swatch.lrg {
+// 	@media all and (min-width: 30em){
+// 		height: 8em;
+// 	}
+// }
+
+
 .color-test{
 	display: none;
 	@media all and (min-width: 30em) {
