LC-833 sets homepage flex elements to 100% width

--- a/source/css/scss/objects/_blocks.scss
+++ b/source/css/scss/objects/_blocks.scss
@@ -112,8 +112,8 @@
 /* Block Inset */
 .block-inset {
 	position: relative;
-	width: 266px;
-
+	width: 100%;
+ 
 	.b-thumb {
 		position: relative;
 		z-index: 0;
