LC-833 adds head tags for search engine ignore features

--- a/source/_patterns/00-atoms/00-meta/_00-head.mustache
+++ b/source/_patterns/00-atoms/00-meta/_00-head.mustache
@@ -8,7 +8,13 @@
 		<link href='http://fonts.googleapis.com/css?family=Varela' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Droid+Sans:400' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="../../css/style.css?{{ cacheBuster }}" media="all" />
-
+		<meta name="robots" content="noindex" />
+		<meta name="robots" content="nofollow" />
+		<meta name="robots" content="noarchive" />
+		<meta name="googlebot" content="nosnippet" />
+		<meta name="robots" content="noodp" />
+		<meta name="slurp" content="noydir">
+		<meta name="robots" content="noimageindex,nomediaindex" />
 		<!-- Begin Pattern Lab (Required for Pattern Lab to run properly) -->
 		{% pattern-lab-head %}
 		<!-- End Pattern Lab -->
