LC-834 generates social share menu for desktop

--- a/source/_patterns/01-molecules/06-components/00-social-share.mustache
+++ b/source/_patterns/01-molecules/06-components/00-social-share.mustache
@@ -1,8 +1,63 @@
 <div class="social-share">
 	<ul class="social-share-list">
-		<li><a href="{{ url }}">Like</a></li>
-		<li><a href="{{ url }}">Tweet</a></li>
-		<li><a href="{{ url }}">Email</a></li>
-		<li><a href="{{ url }}">Comment</a></li>
+		<li>
+			<a href="{{ url }}" class="twitter">
+				<div class="img-wrap float">
+					<img src="../../images/twitter_icon.png">
+				</div>
+				<div class="text-wrap">
+					<p>Join Mayor @ericgarcetti as we make history and sign #RaisetheWageLA into law this Saturday http://www.lamayor.org/signing_ceremony …</p>
+				</div>
+			</a>
+		</li>
+		<li>
+			<a href="{{ url }}" class="facebook">
+				<div class="img-wrap" >
+				<img src="../../images/facebook_icon.png">
+				</div>
+			</a>
+		</li>
+		<li>
+			<a href="{{ url }}" class="instagram">
+				<div class="img-wrap" > 
+				<img src="../../images/instagram_icon.png">
+				</div>
+			</a>
+		</li>
+		<li>
+			<a href="{{ url }}" class="linkedin">
+				<div class="img-wrap" >
+				<img src="../../images/linkedin_icon.png">
+				</div>
+			</a>
+		</li>
+		<li>
+			<a href="{{ url }}" class="youtube">
+				<div class="img-wrap">
+				<img src="../../images/youtube_icon.png">
+				</div>
+			</a>
+		</li>
+		<li>
+			<a href="{{ url }}" class="sharethis">
+				<div class="img-wrap" >
+				<img src="../../images/sharethis_icon.png">
+				</div>
+			</a>
+		</li>
+		<li>
+			<a href="{{ url }}" class="feedback">
+				<div class="img-wrap" >
+				<img src="../../images/feedback_icon.png">
+				</div>
+			</a>
+		</li>
+		<li>
+			<a href="{{ url }}" class="rss">
+				<div class="img-wrap" >
+				<img src="../../images/rss_icon.png">
+				</div>
+			</a>
+		</li>
 	</ul>
 </div>
