Update Social Share colors

--- a/source/css/scss/objects/_article.scss
+++ b/source/css/scss/objects/_article.scss
@@ -23,7 +23,7 @@
 	width: 100%;
 	height: 3.5em;
 	z-index: 1;
-	background: #5EA9DD;
+	background: #227fa6;
 	text-align: center;
 
 
@@ -43,7 +43,7 @@
 		padding: 0.75em ;
 
 		&.twitter {
-			background: #5EA9DD;
+			background: #227fa6;
 			width: 35em;
 		} 
 		&.facebook {
