Updated Mas height of Hero and added a spacing variable

--- a/source/css/style.css
+++ b/source/css/style.css
@@ -1701,6 +1701,7 @@ body .wrapper:first-child {
 /* line 24, scss/objects/_blocks.scss */
 .block-hero {
   margin-bottom: 0.5em;
+  max-height: 724px;
   position: relative;
 }
 /* line 28, scss/objects/_blocks.scss */
