--- a/core/source/css/scss/generic/_variables.scss
+++ b/core/source/css/scss/generic/_variables.scss
@@ -34,6 +34,7 @@ $font-size-large : 1.4375em;
 $max-width: 72em;
 
 //Defaults
+$space-none : 0;
 $space : 1em;
 $space-and-half : $space*1.5;
 $space-double : $space*2;
