--- a/source/css/style.css
+++ b/source/css/style.css
@@ -1704,12 +1704,20 @@ body .wrapper:first-child {
   max-height: 700px;
   position: relative;
 }
-/* line 28, scss/objects/_blocks.scss */
+/* line 27, scss/objects/_blocks.scss */
+.block-hero .b-thumb {
+  background: #ffdb4c;
+  height: 700px;
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
+}
+/* line 33, scss/objects/_blocks.scss */
 .block-hero .b-thumb img {
   display: block;
   width: 100%;
 }
-/* line 36, scss/objects/_blocks.scss */
+/* line 41, scss/objects/_blocks.scss */
 .block-hero .b-text {
   position: absolute;
   bottom: 40%;
@@ -1727,7 +1735,7 @@ body .wrapper:first-child {
   -o-border-radius: 10px;
   border-radius: 10px;
 }
-/* line 51, scss/objects/_blocks.scss */
+/* line 56, scss/objects/_blocks.scss */
 .block-hero .b-title {
   text-transform: uppercase;
   color: #fff;
@@ -1735,14 +1743,14 @@ body .wrapper:first-child {
   line-height: 1.25em;
 }
 @media all and (min-width: 720px) {
-  /* line 51, scss/objects/_blocks.scss */
+  /* line 56, scss/objects/_blocks.scss */
   .block-hero .b-title {
     font-size: 2.25em;
     line-height: 1.125em;
   }
 }
 @media all and (min-width: 960px) {
-  /* line 51, scss/objects/_blocks.scss */
+  /* line 56, scss/objects/_blocks.scss */
   .block-hero .b-title {
     font-size: 3em;
     line-height: 1.05em;
@@ -1750,27 +1758,27 @@ body .wrapper:first-child {
 }
 
 /* Block Thumbnail with Headline */
-/* line 68, scss/objects/_blocks.scss */
+/* line 73, scss/objects/_blocks.scss */
 .block-thumb {
   display: table;
   width: 100%;
   border-collapse: collapse;
 }
-/* line 73, scss/objects/_blocks.scss */
+/* line 78, scss/objects/_blocks.scss */
 .block-thumb .b-inner {
   display: table-row;
   vertical-align: top;
   overflow: hidden;
 }
 @media all and (min-width: 29.75em) {
-  /* line 79, scss/objects/_blocks.scss */
+  /* line 84, scss/objects/_blocks.scss */
   .block-thumb .b-thumb {
     display: table-cell;
     vertical-align: top;
     width: 20%;
     max-width: 10em;
   }
-  /* line 86, scss/objects/_blocks.scss */
+  /* line 91, scss/objects/_blocks.scss */
   .block-thumb .b-thumb img {
     display: block;
     width: 100%;
@@ -1778,7 +1786,7 @@ body .wrapper:first-child {
   }
 }
 @media all and (min-width: 29.75em) {
-  /* line 94, scss/objects/_blocks.scss */
+  /* line 99, scss/objects/_blocks.scss */
   .block-thumb .b-text {
     display: table-cell;
     width: 70%;
@@ -1787,39 +1795,39 @@ body .wrapper:first-child {
 }
 
 /* Block Headline Summary */
-/* line 106, scss/objects/_blocks.scss */
+/* line 111, scss/objects/_blocks.scss */
 .block-headline-summary a {
   display: block;
   padding: 0.5em;
 }
 
 /* Block Inset */
-/* line 113, scss/objects/_blocks.scss */
+/* line 118, scss/objects/_blocks.scss */
 .block-inset {
   position: relative;
   width: 100%;
 }
-/* line 117, scss/objects/_blocks.scss */
+/* line 122, scss/objects/_blocks.scss */
 .block-inset .b-thumb {
   position: relative;
   z-index: 0;
 }
-/* line 121, scss/objects/_blocks.scss */
+/* line 126, scss/objects/_blocks.scss */
 .block-inset .b-thumb img {
   display: block;
 }
 
 /* Hero Block */
-/* line 128, scss/objects/_blocks.scss */
+/* line 133, scss/objects/_blocks.scss */
 .block-inset {
   margin-bottom: 0.5em;
   position: relative;
 }
-/* line 132, scss/objects/_blocks.scss */
+/* line 137, scss/objects/_blocks.scss */
 .block-inset .headline {
   font-size: 1.1em;
 }
-/* line 136, scss/objects/_blocks.scss */
+/* line 141, scss/objects/_blocks.scss */
 .block-inset .b-text {
   position: absolute;
   bottom: 0;
@@ -1831,12 +1839,12 @@ body .wrapper:first-child {
 }
 
 /* Block Thumb with Summary */
-/* line 149, scss/objects/_blocks.scss */
+/* line 154, scss/objects/_blocks.scss */
 .block-thumb-summary .b-thumb {
   float: left;
   width: 50%;
 }
-/* line 154, scss/objects/_blocks.scss */
+/* line 159, scss/objects/_blocks.scss */
 .block-thumb-summary .b-text {
   margin-left: 50%;
   padding: 0.5em;
