--- a/source/css/style.css
+++ b/source/css/style.css
@@ -2056,78 +2056,124 @@ body .wrapper:first-child {
 /* line 22, scss/objects/_article.scss */
 .social-share {
   width: 100%;
-  height: 3.5em;
+  height: 2em;
   z-index: 1;
   background: #227fa6;
   text-align: center;
 }
-/* line 31, scss/objects/_article.scss */
+@media all and (min-width: 720px) {
+  /* line 22, scss/objects/_article.scss */
+  .social-share {
+    height: 3.5em;
+  }
+}
+/* line 35, scss/objects/_article.scss */
 .social-share ul {
   display: inline-block;
 }
-/* line 35, scss/objects/_article.scss */
+/* line 39, scss/objects/_article.scss */
 .social-share li {
   float: left;
 }
-/* line 39, scss/objects/_article.scss */
+/* line 43, scss/objects/_article.scss */
 .social-share a {
   background: #474747;
   color: #fff;
   display: block;
-  padding: 0.75em;
+  padding: 0.4em 0.25em;
 }
-/* line 45, scss/objects/_article.scss */
+@media all and (min-width: 720px) {
+  /* line 43, scss/objects/_article.scss */
+  .social-share a {
+    padding: 0.75em;
+  }
+}
+/* line 52, scss/objects/_article.scss */
 .social-share a.twitter {
-  background: #227fa6;
-  width: 35em;
+  background: #5EA9DD;
 }
-/* line 49, scss/objects/_article.scss */
+@media all and (min-width: 960px) {
+  /* line 52, scss/objects/_article.scss */
+  .social-share a.twitter {
+    background: #227fa6;
+    width: 30.9em;
+  }
+}
+/* line 59, scss/objects/_article.scss */
 .social-share a.facebook {
   background: #3B5998;
 }
-/* line 52, scss/objects/_article.scss */
+/* line 62, scss/objects/_article.scss */
 .social-share a.instagram {
   background: gray;
 }
-/* line 55, scss/objects/_article.scss */
+/* line 65, scss/objects/_article.scss */
 .social-share a.linkedin {
   background: #0077B5;
 }
-/* line 58, scss/objects/_article.scss */
+/* line 68, scss/objects/_article.scss */
 .social-share a.youtube {
   background: #CC181E;
 }
-/* line 61, scss/objects/_article.scss */
+/* line 71, scss/objects/_article.scss */
 .social-share a.sharethis {
   background: #00BF00;
 }
-/* line 64, scss/objects/_article.scss */
+/* line 74, scss/objects/_article.scss */
 .social-share a.feedback {
   background: #CC4E10;
 }
-/* line 67, scss/objects/_article.scss */
+/* line 77, scss/objects/_article.scss */
 .social-share a.rss {
   background: #FF9900;
 }
-/* line 76, scss/objects/_article.scss */
+/* line 86, scss/objects/_article.scss */
 .social-share a .img-wrap {
-  width: 2.5em;
-  height: 2em;
+  width: 1.86em;
+  height: 1.3em;
 }
-/* line 79, scss/objects/_article.scss */
+@media all and (min-width: 720px) {
+  /* line 86, scss/objects/_article.scss */
+  .social-share a .img-wrap {
+    width: 2.5em;
+    height: 2em;
+  }
+}
+/* line 93, scss/objects/_article.scss */
 .social-share a .img-wrap.float {
   float: left;
 }
-/* line 84, scss/objects/_article.scss */
+/* line 98, scss/objects/_article.scss */
 .social-share a img {
-  height: 2em;
+  height: 1.3em;
 }
-/* line 89, scss/objects/_article.scss */
+@media all and (min-width: 720px) {
+  /* line 98, scss/objects/_article.scss */
+  .social-share a img {
+    height: 2em;
+  }
+}
+/* line 105, scss/objects/_article.scss */
 .social-share a .text-wrap {
   text-align: left;
-  margin-left: 4em;
   height: 2.7em;
   font-size: 0.75em;
+}
+@media all and (min-width: 960px) {
+  /* line 105, scss/objects/_article.scss */
+  .social-share a .text-wrap {
+    margin-left: 4em;
+  }
+}
+/* line 114, scss/objects/_article.scss */
+.social-share a p {
+  display: none;
+}
+@media all and (min-width: 960px) {
+  /* line 114, scss/objects/_article.scss */
+  .social-share a p {
+    display: inherit;
+  }
 }
 
 /* line 2, scss/objects/_comments.scss */
