LC-833 sets up drop-down nav menu with jquery slidetoggle

--- a/source/_patterns/00-atoms/00-meta/_01-foot.mustache
+++ b/source/_patterns/00-atoms/00-meta/_01-foot.mustache
@@ -1,6 +1,7 @@
 
 	<!--DO NOT REMOVE-->
 	{% pattern-lab-foot %}
-
+	<script src="../../js/jquery-2.0.0b2.js"></script>
+	<script src="../../js/script.js"></script>
 	</body>
 </html>
