--- a/source/css/scss/objects/_nav.scss
+++ b/source/css/scss/objects/_nav.scss
@@ -89,3 +89,34 @@
 		padding: $pad;
 	}
 }
+
+//Drop-down nav
+
+.drop-down {
+	display: none;
+	position: absolute;
+	top: 0%;
+	background: $teal;
+	width: 100%;
+	height: 100%;
+	z-index: 100;
+	
+	ul {
+		margin-top: 17%;
+		margin-left: 10%;
+	}
+
+	li {
+		color: $white;
+		font-size: 1.625em;
+		line-height: 1.15384615em;
+		@media all and (min-width: $bp-med-2){
+			font-size: 2em;
+			line-height: 1.25em;
+		}
+		@media all and (min-width: $bp-large){
+			font-size: 2.25em;
+			line-height: 1.25em;
+		}
+	}
+}
