--- a/source/css/style.css
+++ b/source/css/style.css
@@ -927,7 +927,7 @@ td {
   display: block;
   background: #014982;
   width: 100%;
-  z-index: 1;
+  z-index: 200;
   margin-left: auto;
   margin-right: auto;
   left: 0;
@@ -1144,6 +1144,42 @@ td {
 /* line 88, scss/objects/_nav.scss */
 .pagination a {
   padding: 1em;
+}
+
+/* line 95, scss/objects/_nav.scss */
+.drop-down {
+  display: none;
+  position: absolute;
+  top: 0%;
+  background: #00758C;
+  width: 100%;
+  height: 100%;
+  z-index: 100;
+}
+/* line 104, scss/objects/_nav.scss */
+.drop-down ul {
+  margin-top: 17%;
+  margin-left: 10%;
+}
+/* line 109, scss/objects/_nav.scss */
+.drop-down li {
+  color: #fff;
+  font-size: 1.625em;
+  line-height: 1.15384615em;
+}
+@media all and (min-width: 720px) {
+  /* line 109, scss/objects/_nav.scss */
+  .drop-down li {
+    font-size: 2em;
+    line-height: 1.25em;
+  }
+}
+@media all and (min-width: 960px) {
+  /* line 109, scss/objects/_nav.scss */
+  .drop-down li {
+    font-size: 2.25em;
+    line-height: 1.25em;
+  }
 }
 
 /*------------------------------------*\
