Adjust header background image

--- a/source/_patterns/02-organisms/00-global/00-header.mustache
+++ b/source/_patterns/02-organisms/00-global/00-header.mustache
@@ -10,4 +10,14 @@
 	<!--{{> molecules-search }}-->
 </header>
 </div>
+<!-- <div class="header-wrap-background-blur">
+<header class="header cf" role="banner">
+{{> atoms-logo }}
+</header>
+</div> -->
+<div class="header-wrap-background">
+<header class="header cf" role="banner">
+	{{> atoms-logo }}
+</header>
+</div>
 <!-- End .header -->
