--- a/source/css/style.css
+++ b/source/css/style.css
@@ -925,7 +925,6 @@ td {
 /* line 1, scss/objects/_header.scss */
 .header-wrap {
   display: block;
-  background: #014982;
   width: 100%;
   z-index: 200;
   margin-left: auto;
@@ -942,33 +941,56 @@ td {
   }
 }
 
-/* line 17, scss/objects/_header.scss */
+/* line 15, scss/objects/_header.scss */
+.header-wrap-background {
+  display: block;
+  background: #212121;
+  width: 100%;
+  z-index: 100;
+  margin-left: auto;
+  margin-right: auto;
+  left: 0;
+  right: 0;
+  opacity: .5;
+  filter: alpha(opacity=50);
+  /* For IE8 and earlier */
+}
+@media all and (min-width: 720px) {
+  /* line 15, scss/objects/_header.scss */
+  .header-wrap-background {
+    position: absolute;
+    top: 2.5em;
+    width: 100%;
+  }
+}
+
+/* line 55, scss/objects/_header.scss */
 .header {
   display: block;
   max-width: 310px;
 }
 @media all and (min-width: 720px) {
-  /* line 17, scss/objects/_header.scss */
+  /* line 55, scss/objects/_header.scss */
   .header {
     max-width: 1020px;
   }
 }
 
-/* line 26, scss/objects/_header.scss */
+/* line 64, scss/objects/_header.scss */
 .logo {
   float: left;
   max-width: 5.5em;
   margin: 0.8em 0 0.8em 1.4em;
 }
 @media all and (min-width: 720px) {
-  /* line 26, scss/objects/_header.scss */
+  /* line 64, scss/objects/_header.scss */
   .logo {
     max-width: 9rem;
     margin: 0;
   }
 }
 
-/* line 37, scss/objects/_header.scss */
+/* line 75, scss/objects/_header.scss */
 .title {
   float: left;
   margin: 1.2em 0 0 1em;
@@ -979,7 +1001,7 @@ td {
   margin-bottom: 0;
 }
 @media all and (min-width: 720px) {
-  /* line 37, scss/objects/_header.scss */
+  /* line 75, scss/objects/_header.scss */
   .title {
     font-size: 1.55em;
     line-height: 1.25em;
@@ -989,7 +1011,7 @@ td {
   }
 }
 @media all and (min-width: 960px) {
-  /* line 37, scss/objects/_header.scss */
+  /* line 75, scss/objects/_header.scss */
   .title {
     font-size: 2em;
     line-height: 1.25em;
@@ -999,7 +1021,7 @@ td {
   }
 }
 
-/* line 61, scss/objects/_header.scss */
+/* line 99, scss/objects/_header.scss */
 .nav-toggle {
   float: right;
   display: block;
@@ -1009,26 +1031,26 @@ td {
   border-left: 1px solid #dbdbdb;
 }
 @media all and (min-width: 480px) {
-  /* line 61, scss/objects/_header.scss */
+  /* line 99, scss/objects/_header.scss */
   .nav-toggle {
     display: none;
   }
 }
 @media all and (max-width: 17em) {
-  /* line 61, scss/objects/_header.scss */
+  /* line 99, scss/objects/_header.scss */
   .nav-toggle {
     padding-left: 0.2rem;
     padding-right: 0.2rem;
   }
 }
 
-/* line 79, scss/objects/_header.scss */
+/* line 117, scss/objects/_header.scss */
 .search-form {
   overflow: hidden;
   max-height: 0;
 }
 @media all and (min-width: 480px) {
-  /* line 79, scss/objects/_header.scss */
+  /* line 117, scss/objects/_header.scss */
   .search-form {
     float: right;
     max-height: none;
