Header background effect applied

--- a/source/_patterns/02-organisms/00-global/00-header.mustache
+++ b/source/_patterns/02-organisms/00-global/00-header.mustache
@@ -1,5 +1,6 @@
 <!--Begin .header -->
 {{> molecules-drop-down-nav}}
+<div class="header-container">
 <div class="header-wrap">
 <header class="header cf" role="banner">
 	{{> atoms-logo }}
@@ -10,14 +11,15 @@
 	<!--{{> molecules-search }}-->
 </header>
 </div>
-<!-- <div class="header-wrap-background-blur">
+<div class="header-wrap-background-blur">
 <header class="header cf" role="banner">
 {{> atoms-logo }}
 </header>
-</div> -->
+</div>
 <div class="header-wrap-background">
 <header class="header cf" role="banner">
 	{{> atoms-logo }}
 </header>
+</div>
 </div>
 <!-- End .header -->
