--- a/source/css/style.css
+++ b/source/css/style.css
@@ -923,6 +923,27 @@ td {
     $PAGE STRUCTURE
 \*------------------------------------*/
 /* line 1, scss/objects/_header.scss */
+.header-container {
+  display: block;
+  width: 100%;
+  height: 105px;
+  z-index: 200;
+  margin-left: auto;
+  margin-right: auto;
+  left: 0;
+  right: 0;
+  overflow: hidden;
+}
+@media all and (min-width: 720px) {
+  /* line 1, scss/objects/_header.scss */
+  .header-container {
+    position: absolute;
+    top: 2.5em;
+    width: 100%;
+  }
+}
+
+/* line 17, scss/objects/_header.scss */
 .header-wrap {
   display: block;
   width: 100%;
@@ -933,15 +954,14 @@ td {
   right: 0;
 }
 @media all and (min-width: 720px) {
-  /* line 1, scss/objects/_header.scss */
+  /* line 17, scss/objects/_header.scss */
   .header-wrap {
     position: absolute;
-    top: 2.5em;
     width: 100%;
   }
 }
 
-/* line 15, scss/objects/_header.scss */
+/* line 31, scss/objects/_header.scss */
 .header-wrap-background {
   display: block;
   background: #212121;
@@ -956,41 +976,69 @@ td {
   /* For IE8 and earlier */
 }
 @media all and (min-width: 720px) {
-  /* line 15, scss/objects/_header.scss */
+  /* line 31, scss/objects/_header.scss */
   .header-wrap-background {
     position: absolute;
-    top: 2.5em;
     width: 100%;
   }
 }
 
-/* line 55, scss/objects/_header.scss */
+/* line 48, scss/objects/_header.scss */
+.header-wrap-background-blur {
+  display: block;
+  width: 100%;
+  z-index: 100;
+  margin-left: auto;
+  margin-right: auto;
+  left: 0;
+  right: 0;
+  background-image: url("../images/hero.jpg");
+  background-repeat: no-repeat;
+  background-size: 100%;
+  background-position: 0px -2.5em;
+  -webkit-filter: blur(5px);
+  -moz-filter: blur(5px);
+  -o-filter: blur(5px);
+  -ms-filter: blur(5px);
+  filter: blur(5px);
+  margin: -2px;
+  padding: 0px;
+}
+@media all and (min-width: 720px) {
+  /* line 48, scss/objects/_header.scss */
+  .header-wrap-background-blur {
+    position: absolute;
+    width: 100%;
+  }
+}
+
+/* line 73, scss/objects/_header.scss */
 .header {
   display: block;
   max-width: 310px;
 }
 @media all and (min-width: 720px) {
-  /* line 55, scss/objects/_header.scss */
+  /* line 73, scss/objects/_header.scss */
   .header {
     max-width: 1020px;
   }
 }
 
-/* line 64, scss/objects/_header.scss */
+/* line 82, scss/objects/_header.scss */
 .logo {
   float: left;
   max-width: 5.5em;
   margin: 0.8em 0 0.8em 1.4em;
 }
 @media all and (min-width: 720px) {
-  /* line 64, scss/objects/_header.scss */
+  /* line 82, scss/objects/_header.scss */
   .logo {
     max-width: 9rem;
     margin: 0;
   }
 }
 
-/* line 75, scss/objects/_header.scss */
+/* line 93, scss/objects/_header.scss */
 .title {
   float: left;
   margin: 1.2em 0 0 1em;
@@ -1001,7 +1049,7 @@ td {
   margin-bottom: 0;
 }
 @media all and (min-width: 720px) {
-  /* line 75, scss/objects/_header.scss */
+  /* line 93, scss/objects/_header.scss */
   .title {
     font-size: 1.55em;
     line-height: 1.25em;
@@ -1011,7 +1059,7 @@ td {
   }
 }
 @media all and (min-width: 960px) {
-  /* line 75, scss/objects/_header.scss */
+  /* line 93, scss/objects/_header.scss */
   .title {
     font-size: 2em;
     line-height: 1.25em;
@@ -1021,7 +1069,7 @@ td {
   }
 }
 
-/* line 99, scss/objects/_header.scss */
+/* line 117, scss/objects/_header.scss */
 .nav-toggle {
   float: right;
   display: block;
@@ -1031,26 +1079,26 @@ td {
   border-left: 1px solid #dbdbdb;
 }
 @media all and (min-width: 480px) {
-  /* line 99, scss/objects/_header.scss */
+  /* line 117, scss/objects/_header.scss */
   .nav-toggle {
     display: none;
   }
 }
 @media all and (max-width: 17em) {
-  /* line 99, scss/objects/_header.scss */
+  /* line 117, scss/objects/_header.scss */
   .nav-toggle {
     padding-left: 0.2rem;
     padding-right: 0.2rem;
   }
 }
 
-/* line 117, scss/objects/_header.scss */
+/* line 135, scss/objects/_header.scss */
 .search-form {
   overflow: hidden;
   max-height: 0;
 }
 @media all and (min-width: 480px) {
-  /* line 117, scss/objects/_header.scss */
+  /* line 135, scss/objects/_header.scss */
   .search-form {
     float: right;
     max-height: none;
