--- a/source/css/scss/objects/_header.scss
+++ b/source/css/scss/objects/_header.scss
@@ -1,3 +1,19 @@
+.header-container{
+	display: block;
+	width: 100%;
+	height: 105px;
+	z-index: 200;
+	margin-left: auto;
+	margin-right: auto;
+	left: 0;
+	right: 0;
+	overflow: hidden;
+	@media all and (min-width: $bp-med-2) {
+		position: absolute;
+		top: 2.5em;
+		width: 100%;
+	}
+}
 .header-wrap{
 	display: block;
 	width: 100%;
@@ -8,7 +24,7 @@
 	right: 0;
 	@media all and (min-width: $bp-med-2) {
 		position: absolute;
-		top: 2.5em;
+		// top: 2.5em;
 		width: 100%;
 	}
 }
@@ -25,33 +41,35 @@
   	filter: alpha(opacity=50); /* For IE8 and earlier */
 	@media all and (min-width: $bp-med-2) {
 		position: absolute;
-		top: 2.5em;
+		// top: 2.5em;
 		width: 100%;
 	}
 }
-// .header-wrap-background-blur{
-// 	display: block;
-// 	width: 100%;
-// 	z-index: 100;
-// 	margin-left: auto;
-// 	margin-right: auto;
-// 	left: 0;
-// 	right: 0;
-// 	background-image: url('../images/hero.jpg');
-//   	background-position: 0px -2.5em;
-//   	-webkit-filter: blur(0px);
-//   	-moz-filter: blur(0px);
-//   	-o-filter: blur(0px);
-//   	-ms-filter: blur(0px);
-//   	filter: blur(0px);
-//   	margin:-2px;
-//   	padding:0px;
-// 	@media all and (min-width: $bp-med-2) {
-// 		position: absolute;
-// 		top: 2.5em;
-// 		width: 100%;
-// 	}
-// }
+.header-wrap-background-blur{
+	display: block;
+	width: 100%;
+	z-index: 100;
+	margin-left: auto;
+	margin-right: auto;
+	left: 0;
+	right: 0;
+	background-image: url('../images/hero.jpg');
+	background-repeat: no-repeat;
+    background-size: 100%;
+  	background-position: 0px -2.5em;
+  	-webkit-filter: blur(5px);
+  	-moz-filter: blur(5px);
+  	-o-filter: blur(5px);
+  	-ms-filter: blur(5px);
+  	filter: blur(5px);
+  	margin:-2px;
+  	padding:0px;
+	@media all and (min-width: $bp-med-2) {
+		position: absolute;
+		// top: 2.5em;
+		width: 100%;
+	}
+}
 .header {
 	@extend .lc;
 	display: block;
