--- a/source/css/style.css
+++ b/source/css/style.css
@@ -956,12 +956,22 @@ td {
 @media all and (min-width: 720px) {
   /* line 17, scss/objects/_header.scss */
   .header-wrap {
+    display: block;
     position: absolute;
     width: 100%;
   }
 }
+@media all and (max-width: 720px) {
+  /* line 17, scss/objects/_header.scss */
+  .header-wrap {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    background: #014982;
+  }
+}
 
-/* line 31, scss/objects/_header.scss */
+/* line 38, scss/objects/_header.scss */
 .header-wrap-background {
   display: block;
   background: #212121;
@@ -976,16 +986,25 @@ td {
   /* For IE8 and earlier */
 }
 @media all and (min-width: 720px) {
-  /* line 31, scss/objects/_header.scss */
+  /* line 38, scss/objects/_header.scss */
   .header-wrap-background {
+    display: block;
     position: absolute;
     width: 100%;
   }
 }
+@media all and (max-width: 720px) {
+  /* line 38, scss/objects/_header.scss */
+  .header-wrap-background {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    display: none;
+  }
+}
 
-/* line 48, scss/objects/_header.scss */
+/* line 62, scss/objects/_header.scss */
 .header-wrap-background-blur {
-  display: block;
   width: 100%;
   z-index: 100;
   margin-left: auto;
@@ -1005,40 +1024,50 @@ td {
   padding: 0px;
 }
 @media all and (min-width: 720px) {
-  /* line 48, scss/objects/_header.scss */
+  /* line 62, scss/objects/_header.scss */
   .header-wrap-background-blur {
+    display: block;
     position: absolute;
     width: 100%;
   }
 }
+@media all and (max-width: 720px) {
+  /* line 62, scss/objects/_header.scss */
+  .header-wrap-background-blur {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    display: none;
+  }
+}
 
-/* line 73, scss/objects/_header.scss */
+/* line 93, scss/objects/_header.scss */
 .header {
   display: block;
   max-width: 310px;
 }
 @media all and (min-width: 720px) {
-  /* line 73, scss/objects/_header.scss */
+  /* line 93, scss/objects/_header.scss */
   .header {
     max-width: 1020px;
   }
 }
 
-/* line 82, scss/objects/_header.scss */
+/* line 102, scss/objects/_header.scss */
 .logo {
   float: left;
   max-width: 5.5em;
   margin: 0.8em 0 0.8em 1.4em;
 }
 @media all and (min-width: 720px) {
-  /* line 82, scss/objects/_header.scss */
+  /* line 102, scss/objects/_header.scss */
   .logo {
     max-width: 9rem;
     margin: 0;
   }
 }
 
-/* line 93, scss/objects/_header.scss */
+/* line 113, scss/objects/_header.scss */
 .title {
   float: left;
   margin: 1.2em 0 0 1em;
@@ -1049,7 +1078,7 @@ td {
   margin-bottom: 0;
 }
 @media all and (min-width: 720px) {
-  /* line 93, scss/objects/_header.scss */
+  /* line 113, scss/objects/_header.scss */
   .title {
     font-size: 1.55em;
     line-height: 1.25em;
@@ -1059,7 +1088,7 @@ td {
   }
 }
 @media all and (min-width: 960px) {
-  /* line 93, scss/objects/_header.scss */
+  /* line 113, scss/objects/_header.scss */
   .title {
     font-size: 2em;
     line-height: 1.25em;
@@ -1069,7 +1098,7 @@ td {
   }
 }
 
-/* line 117, scss/objects/_header.scss */
+/* line 137, scss/objects/_header.scss */
 .nav-toggle {
   float: right;
   display: block;
@@ -1079,26 +1108,26 @@ td {
   border-left: 1px solid #dbdbdb;
 }
 @media all and (min-width: 480px) {
-  /* line 117, scss/objects/_header.scss */
+  /* line 137, scss/objects/_header.scss */
   .nav-toggle {
     display: none;
   }
 }
 @media all and (max-width: 17em) {
-  /* line 117, scss/objects/_header.scss */
+  /* line 137, scss/objects/_header.scss */
   .nav-toggle {
     padding-left: 0.2rem;
     padding-right: 0.2rem;
   }
 }
 
-/* line 135, scss/objects/_header.scss */
+/* line 155, scss/objects/_header.scss */
 .search-form {
   overflow: hidden;
   max-height: 0;
 }
 @media all and (min-width: 480px) {
-  /* line 135, scss/objects/_header.scss */
+  /* line 155, scss/objects/_header.scss */
   .search-form {
     float: right;
     max-height: none;
@@ -1818,7 +1847,7 @@ body .wrapper:first-child {
 /* line 36, scss/objects/_blocks.scss */
 .block-hero .b-text {
   position: absolute;
-  bottom: 40%;
+  bottom: 30%;
   margin-left: auto;
   margin-right: auto;
   left: 0;
