--- a/source/css/scss/objects/_nav.scss
+++ b/source/css/scss/objects/_nav.scss
@@ -96,7 +96,7 @@
 	display: none;
 	position: absolute;
 	top: 0%;
-	background: $teal;
+	background: $gray-med;
 	width: 100%;
 	height: 100%;
 	z-index: 100;
