--- a/source/css/style.css
+++ b/source/css/style.css
@@ -1250,7 +1250,7 @@ td {
   display: none;
   position: absolute;
   top: 0%;
-  background: #00758C;
+  background: #474747;
   width: 100%;
   height: 100%;
   z-index: 100;
