Updated secondary page header effects

--- a/source/css/style.css
+++ b/source/css/style.css
@@ -1011,7 +1011,6 @@ td {
   margin-right: auto;
   left: 0;
   right: 0;
-  background-image: url("../images/hero.jpg");
   background-repeat: no-repeat;
   background-size: 100%;
   background-position: 0px -2.5em;
@@ -1041,33 +1040,48 @@ td {
   }
 }
 
-/* line 93, scss/objects/_header.scss */
+/* line 92, scss/objects/_header.scss */
+.home .header-wrap-background-blur {
+  background-image: url("../images/hero.jpg");
+}
+
+/* line 95, scss/objects/_header.scss */
+.blog .header-wrap-background-blur {
+  background-image: url("../images/hero_2nd.jpg");
+}
+
+/* line 98, scss/objects/_header.scss */
+.article .header-wrap-background-blur {
+  background-image: url("../images/hero_2nd.jpg");
+}
+
+/* line 101, scss/objects/_header.scss */
 .header {
   display: block;
   max-width: 310px;
 }
 @media all and (min-width: 720px) {
-  /* line 93, scss/objects/_header.scss */
+  /* line 101, scss/objects/_header.scss */
   .header {
     max-width: 1020px;
   }
 }
 
-/* line 102, scss/objects/_header.scss */
+/* line 110, scss/objects/_header.scss */
 .logo {
   float: left;
   max-width: 5.5em;
   margin: 0.8em 0 0.8em 1.4em;
 }
 @media all and (min-width: 720px) {
-  /* line 102, scss/objects/_header.scss */
+  /* line 110, scss/objects/_header.scss */
   .logo {
     max-width: 9rem;
     margin: 0;
   }
 }
 
-/* line 113, scss/objects/_header.scss */
+/* line 121, scss/objects/_header.scss */
 .title {
   float: left;
   margin: 1.2em 0 0 1em;
@@ -1078,7 +1092,7 @@ td {
   margin-bottom: 0;
 }
 @media all and (min-width: 720px) {
-  /* line 113, scss/objects/_header.scss */
+  /* line 121, scss/objects/_header.scss */
   .title {
     font-size: 1.55em;
     line-height: 1.25em;
@@ -1088,7 +1102,7 @@ td {
   }
 }
 @media all and (min-width: 960px) {
-  /* line 113, scss/objects/_header.scss */
+  /* line 121, scss/objects/_header.scss */
   .title {
     font-size: 2em;
     line-height: 1.25em;
@@ -1098,7 +1112,7 @@ td {
   }
 }
 
-/* line 137, scss/objects/_header.scss */
+/* line 145, scss/objects/_header.scss */
 .nav-toggle {
   float: right;
   display: block;
@@ -1108,26 +1122,26 @@ td {
   border-left: 1px solid #dbdbdb;
 }
 @media all and (min-width: 480px) {
-  /* line 137, scss/objects/_header.scss */
+  /* line 145, scss/objects/_header.scss */
   .nav-toggle {
     display: none;
   }
 }
 @media all and (max-width: 17em) {
-  /* line 137, scss/objects/_header.scss */
+  /* line 145, scss/objects/_header.scss */
   .nav-toggle {
     padding-left: 0.2rem;
     padding-right: 0.2rem;
   }
 }
 
-/* line 155, scss/objects/_header.scss */
+/* line 163, scss/objects/_header.scss */
 .search-form {
   overflow: hidden;
   max-height: 0;
 }
 @media all and (min-width: 480px) {
-  /* line 155, scss/objects/_header.scss */
+  /* line 163, scss/objects/_header.scss */
   .search-form {
     float: right;
     max-height: none;
