--- a/source/css/style.css
+++ b/source/css/style.css
@@ -975,6 +975,7 @@ td {
 .header-wrap-background {
   display: block;
   background: #212121;
+  max-width: 1920px;
   width: 100%;
   z-index: 100;
   margin-left: auto;
@@ -1003,8 +1004,9 @@ td {
   }
 }
 
-/* line 62, scss/objects/_header.scss */
+/* line 63, scss/objects/_header.scss */
 .header-wrap-background-blur {
+  max-width: 1910px;
   width: 100%;
   z-index: 100;
   margin-left: auto;
@@ -1024,15 +1026,17 @@ td {
   padding: 0px;
 }
 @media all and (min-width: 720px) {
-  /* line 62, scss/objects/_header.scss */
+  /* line 63, scss/objects/_header.scss */
   .header-wrap-background-blur {
     display: block;
     position: absolute;
     width: 100%;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
 @media all and (max-width: 720px) {
-  /* line 62, scss/objects/_header.scss */
+  /* line 63, scss/objects/_header.scss */
   .header-wrap-background-blur {
     position: absolute;
     top: 0;
@@ -1041,33 +1045,33 @@ td {
   }
 }
 
-/* line 93, scss/objects/_header.scss */
+/* line 97, scss/objects/_header.scss */
 .header {
   display: block;
   max-width: 310px;
 }
 @media all and (min-width: 720px) {
-  /* line 93, scss/objects/_header.scss */
+  /* line 97, scss/objects/_header.scss */
   .header {
     max-width: 1020px;
   }
 }
 
-/* line 102, scss/objects/_header.scss */
+/* line 106, scss/objects/_header.scss */
 .logo {
   float: left;
   max-width: 5.5em;
   margin: 0.8em 0 0.8em 1.4em;
 }
 @media all and (min-width: 720px) {
-  /* line 102, scss/objects/_header.scss */
+  /* line 106, scss/objects/_header.scss */
   .logo {
     max-width: 9rem;
     margin: 0;
   }
 }
 
-/* line 113, scss/objects/_header.scss */
+/* line 117, scss/objects/_header.scss */
 .title {
   float: left;
   margin: 1.2em 0 0 1em;
@@ -1078,7 +1082,7 @@ td {
   margin-bottom: 0;
 }
 @media all and (min-width: 720px) {
-  /* line 113, scss/objects/_header.scss */
+  /* line 117, scss/objects/_header.scss */
   .title {
     font-size: 1.55em;
     line-height: 1.25em;
@@ -1088,7 +1092,7 @@ td {
   }
 }
 @media all and (min-width: 960px) {
-  /* line 113, scss/objects/_header.scss */
+  /* line 117, scss/objects/_header.scss */
   .title {
     font-size: 2em;
     line-height: 1.25em;
@@ -1098,7 +1102,7 @@ td {
   }
 }
 
-/* line 137, scss/objects/_header.scss */
+/* line 141, scss/objects/_header.scss */
 .nav-toggle {
   float: right;
   display: block;
@@ -1108,26 +1112,26 @@ td {
   border-left: 1px solid #dbdbdb;
 }
 @media all and (min-width: 480px) {
-  /* line 137, scss/objects/_header.scss */
+  /* line 141, scss/objects/_header.scss */
   .nav-toggle {
     display: none;
   }
 }
 @media all and (max-width: 17em) {
-  /* line 137, scss/objects/_header.scss */
+  /* line 141, scss/objects/_header.scss */
   .nav-toggle {
     padding-left: 0.2rem;
     padding-right: 0.2rem;
   }
 }
 
-/* line 155, scss/objects/_header.scss */
+/* line 159, scss/objects/_header.scss */
 .search-form {
   overflow: hidden;
   max-height: 0;
 }
 @media all and (min-width: 480px) {
-  /* line 155, scss/objects/_header.scss */
+  /* line 159, scss/objects/_header.scss */
   .search-form {
     float: right;
     max-height: none;
@@ -1837,15 +1841,20 @@ body .wrapper:first-child {
 .block-hero {
   margin-bottom: 0.5em;
   max-height: 700px;
+  overflow: hidden;
   position: relative;
 }
-/* line 28, scss/objects/_blocks.scss */
+/* line 29, scss/objects/_blocks.scss */
 .block-hero .b-thumb img {
+  max-width: 1920px;
   display: block;
   width: 100%;
+  margin-left: auto;
+  margin-right: auto;
 }
-/* line 36, scss/objects/_blocks.scss */
+/* line 40, scss/objects/_blocks.scss */
 .block-hero .b-text {
+  max-width: 1024px;
   position: absolute;
   bottom: 30%;
   margin-left: auto;
@@ -1862,7 +1871,7 @@ body .wrapper:first-child {
   -o-border-radius: 10px;
   border-radius: 10px;
 }
-/* line 51, scss/objects/_blocks.scss */
+/* line 56, scss/objects/_blocks.scss */
 .block-hero .b-title {
   text-transform: uppercase;
   color: #fff;
@@ -1870,14 +1879,14 @@ body .wrapper:first-child {
   line-height: 1.25em;
 }
 @media all and (min-width: 720px) {
-  /* line 51, scss/objects/_blocks.scss */
+  /* line 56, scss/objects/_blocks.scss */
   .block-hero .b-title {
     font-size: 2.25em;
     line-height: 1.125em;
   }
 }
 @media all and (min-width: 960px) {
-  /* line 51, scss/objects/_blocks.scss */
+  /* line 56, scss/objects/_blocks.scss */
   .block-hero .b-title {
     font-size: 3em;
     line-height: 1.05em;
@@ -1885,27 +1894,27 @@ body .wrapper:first-child {
 }
 
 /* Block Thumbnail with Headline */
-/* line 68, scss/objects/_blocks.scss */
+/* line 73, scss/objects/_blocks.scss */
 .block-thumb {
   display: table;
   width: 100%;
   border-collapse: collapse;
 }
-/* line 73, scss/objects/_blocks.scss */
+/* line 78, scss/objects/_blocks.scss */
 .block-thumb .b-inner {
   display: table-row;
   vertical-align: top;
   overflow: hidden;
 }
 @media all and (min-width: 29.75em) {
-  /* line 79, scss/objects/_blocks.scss */
+  /* line 84, scss/objects/_blocks.scss */
   .block-thumb .b-thumb {
     display: table-cell;
     vertical-align: top;
     width: 20%;
     max-width: 10em;
   }
-  /* line 86, scss/objects/_blocks.scss */
+  /* line 91, scss/objects/_blocks.scss */
   .block-thumb .b-thumb img {
     display: block;
     width: 100%;
@@ -1913,7 +1922,7 @@ body .wrapper:first-child {
   }
 }
 @media all and (min-width: 29.75em) {
-  /* line 94, scss/objects/_blocks.scss */
+  /* line 99, scss/objects/_blocks.scss */
   .block-thumb .b-text {
     display: table-cell;
     width: 70%;
@@ -1922,39 +1931,39 @@ body .wrapper:first-child {
 }
 
 /* Block Headline Summary */
-/* line 106, scss/objects/_blocks.scss */
+/* line 111, scss/objects/_blocks.scss */
 .block-headline-summary a {
   display: block;
   padding: 0.5em;
 }
 
 /* Block Inset */
-/* line 113, scss/objects/_blocks.scss */
+/* line 118, scss/objects/_blocks.scss */
 .block-inset {
   position: relative;
   width: 100%;
 }
-/* line 117, scss/objects/_blocks.scss */
+/* line 122, scss/objects/_blocks.scss */
 .block-inset .b-thumb {
   position: relative;
   z-index: 0;
 }
-/* line 121, scss/objects/_blocks.scss */
+/* line 126, scss/objects/_blocks.scss */
 .block-inset .b-thumb img {
   display: block;
 }
 
 /* Hero Block */
-/* line 128, scss/objects/_blocks.scss */
+/* line 133, scss/objects/_blocks.scss */
 .block-inset {
   margin-bottom: 0.5em;
   position: relative;
 }
-/* line 132, scss/objects/_blocks.scss */
+/* line 137, scss/objects/_blocks.scss */
 .block-inset .headline {
   font-size: 1.1em;
 }
-/* line 136, scss/objects/_blocks.scss */
+/* line 141, scss/objects/_blocks.scss */
 .block-inset .b-text {
   position: absolute;
   bottom: 0;
@@ -1966,12 +1975,12 @@ body .wrapper:first-child {
 }
 
 /* Block Thumb with Summary */
-/* line 149, scss/objects/_blocks.scss */
+/* line 154, scss/objects/_blocks.scss */
 .block-thumb-summary .b-thumb {
   float: left;
   width: 50%;
 }
-/* line 154, scss/objects/_blocks.scss */
+/* line 159, scss/objects/_blocks.scss */
 .block-thumb-summary .b-text {
   margin-left: 50%;
   padding: 0.5em;
