3 Up image banner update to full width

--- a/source/_patterns/03-templates/00-homepage.mustache
+++ b/source/_patterns/03-templates/00-homepage.mustache
@@ -6,9 +6,6 @@
 		{{# hero }}
 			{{> molecules-block-hero }}
 		{{/ hero}}
-	<div role="main">
-
-	
 		<div class="g g-3up">
 			{{# touts}}
 				<div class="gi">
@@ -16,6 +13,8 @@
 				</div>
 			{{/ touts}}
 		</div><!--end 3up-->
+	<div role="main">
+<div class="demo">
 
 		<hr />
 
