--- a/source/css/scss/generic/_variables.scss
+++ b/source/css/scss/generic/_variables.scss
@@ -57,6 +57,7 @@ $space-and-half : $space*1.5;
 $space-double : $space*2;
 $space-quad : $space*4;
 $space-half : $space/2;
+$pad-none : 0;
 $pad : 1em;
 $pad-and-half : $pad*1.5;
 $pad-double : $pad*2;
