header effects applied

--- a/source/_patterns/02-organisms/00-global/00-header.mustache
+++ b/source/_patterns/02-organisms/00-global/00-header.mustache
@@ -1,4 +1,5 @@
 <!--Begin .header -->
+<div class="header-container">
 <div class="header-wrap">
 <header class="header cf" role="banner">
 	{{> atoms-logo }}
@@ -8,5 +9,14 @@
 	{{> molecules-primary-nav }}
 	{{> molecules-search }}
 </header>
+</div>
+<div class="header-wrap-background-blur">
+ <header class="header cf" role="banner">		 
+ 	{{> atoms-logo }}
+</div>
+<div class="header-wrap-background">
+ <header class="header cf" role="banner">		 
+ 	{{> atoms-logo }}
+</div>
 </div>
 <!-- End .header -->
